# asr-standardized-combined

./: README.md  dataset_pipeline_setup.md  pyproject.toml  requirements.txt
asr_standardized_combined/: __init__.py
asr_standardized_combined/parsers/: npsc_parser.py  nst_parser.py  rundkast_parser.py
asr_standardized_combined/splits/: split_npsc.py  split_rundkast.py
asr_standardized_combined/standardize/: __init__.py  patch_npsc.py  patch_nst.py  patch_rundkast.py  standardize_nbtale12.py  standardize_nbtale3.py  standardize_npsc.py  standardize_nst.py  standardize_rundkast.py  utils.py
combined_dataset/parsers/: __init__.py  nbtale_trans_parser.py  shared_classes.py
combined_dataset/splits/: split_nst.py
combined_dataset/standardize/: README.md  __init__.py  standardize_nbtale12.py  standardize_nbtale3.py  standardize_npsc.py  standardize_nst.py
